--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,9 @@
 		<meta charset="utf-8">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png">
 		<meta name="viewport" content="width=device-width">
+		<meta name="description" content="
+			rogix.dev is the personal website of Rogerio Pereia, a software engineer from Brazil.
+		">
 		<title>rogix</title>
 		%sveltekit.head%
 	</head>
